--- a/app/components/LeftNavigation.module.css
+++ b/app/components/LeftNavigation.module.css
@@ -7,7 +7,7 @@
   left: 0;
   height: calc(100vh - 81px);
   overflow-y: auto;
-  z-index: 100;
+  z-index: 50;
 }
 
 .nav {
